--- a/src/components/Loader/Loader.module.css
+++ b/src/components/Loader/Loader.module.css
@@ -7,14 +7,14 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, 0.8);
 }
 
 .spinner {
   width: 50px;
   height: 50px;
   border: 5px solid #fff;
-  border-top-color: #ff6347;
+  border-top-color: #263238;
   border-radius: 50%;
   animation: spinner 0.6s linear infinite;
 }
